BOWS_DDOS/distribution/build/gcc-4.6.2/cuda-4020/release/cuda-sim/ptx.output
Terminals unused in grammar

   BRANCHTARGETS_DIRECTIVE
   BYTE_DIRECTIVE
   CALLPROTOTYPE_DIRECTIVE
   CALLTARGETS_DIRECTIVE
   MAXNNREG_DIRECTIVE
   REQNTID_DIRECTIVE
   SECTION_DIRECTIVE
   STRUCT_DIRECTIVE
   UNION_DIRECTIVE
   PERIOD


State 301 conflicts: 1 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input directive_statement
    3      | input function_defn
    4      | input function_decl

    5 $@1: /* empty */

    6 function_defn: function_decl $@1 statement_block

    7 $@2: /* empty */

    8 $@3: /* empty */

    9 function_defn: function_decl $@2 block_spec_list $@3 statement_block

   10 block_spec: MAXNTID_DIRECTIVE INT_OPERAND COMMA INT_OPERAND COMMA INT_OPERAND
   11           | MINNCTAPERSM_DIRECTIVE INT_OPERAND
   12           | MAXNCTAPERSM_DIRECTIVE INT_OPERAND

   13 block_spec_list: block_spec
   14                | block_spec_list block_spec

   15 $@4: /* empty */

   16 $@5: /* empty */

   17 function_decl: function_decl_header LEFT_PAREN $@4 param_entry RIGHT_PAREN $@5 function_ident_param

   18 $@6: /* empty */

   19 function_decl: function_decl_header $@6 function_ident_param
   20              | function_decl_header

   21 $@7: /* empty */

   22 $@8: /* empty */

   23 function_ident_param: IDENTIFIER $@7 LEFT_PAREN $@8 param_list RIGHT_PAREN
   24                     | IDENTIFIER

   25 function_decl_header: ENTRY_DIRECTIVE
   26                     | VISIBLE_DIRECTIVE ENTRY_DIRECTIVE
   27                     | FUNC_DIRECTIVE
   28                     | VISIBLE_DIRECTIVE FUNC_DIRECTIVE
   29                     | EXTERN_DIRECTIVE FUNC_DIRECTIVE

   30 param_list: /* empty */
   31           | param_entry

   32 $@9: /* empty */

   33 param_list: param_list COMMA $@9 param_entry

   34 $@10: /* empty */

   35 param_entry: PARAM_DIRECTIVE $@10 variable_spec ptr_spec identifier_spec

   36 $@11: /* empty */

   37 param_entry: REG_DIRECTIVE $@11 variable_spec identifier_spec

   38 ptr_spec: /* empty */
   39         | PTR_DIRECTIVE ptr_space_spec ptr_align_spec
   40         | PTR_DIRECTIVE ptr_align_spec

   41 ptr_space_spec: GLOBAL_DIRECTIVE
   42               | LOCAL_DIRECTIVE
   43               | SHARED_DIRECTIVE

   44 ptr_align_spec: ALIGN_DIRECTIVE INT_OPERAND

   45 statement_block: LEFT_BRACE statement_list RIGHT_BRACE

   46 statement_list: directive_statement
   47               | instruction_statement
   48               | statement_list directive_statement
   49               | statement_list instruction_statement
   50               | statement_list statement_block
   51               | statement_block

   52 directive_statement: variable_declaration SEMI_COLON
   53                    | VERSION_DIRECTIVE DOUBLE_OPERAND
   54                    | VERSION_DIRECTIVE DOUBLE_OPERAND PLUS
   55                    | ADDRESS_SIZE_DIRECTIVE INT_OPERAND
   56                    | TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER
   57                    | TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER
   58                    | TARGET_DIRECTIVE IDENTIFIER
   59                    | FILE_DIRECTIVE INT_OPERAND STRING
   60                    | LOC_DIRECTIVE INT_OPERAND INT_OPERAND INT_OPERAND
   61                    | PRAGMA_DIRECTIVE STRING SEMI_COLON
   62                    | function_decl SEMI_COLON

   63 variable_declaration: variable_spec identifier_list
   64                     | variable_spec identifier_spec EQUALS initializer_list
   65                     | variable_spec identifier_spec EQUALS literal_operand
   66                     | CONSTPTR_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND

   67 variable_spec: var_spec_list

   68 identifier_list: identifier_spec
   69                | identifier_list COMMA identifier_spec

   70 identifier_spec: IDENTIFIER
   71                | IDENTIFIER LEFT_ANGLE_BRACKET INT_OPERAND RIGHT_ANGLE_BRACKET
   72                | IDENTIFIER LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   73                | IDENTIFIER LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET

   74 var_spec_list: var_spec
   75              | var_spec_list var_spec

   76 var_spec: space_spec
   77         | type_spec
   78         | align_spec
   79         | EXTERN_DIRECTIVE

   80 align_spec: ALIGN_DIRECTIVE INT_OPERAND

   81 space_spec: REG_DIRECTIVE
   82           | SREG_DIRECTIVE
   83           | addressable_spec

   84 addressable_spec: CONST_DIRECTIVE
   85                 | GLOBAL_DIRECTIVE
   86                 | LOCAL_DIRECTIVE
   87                 | PARAM_DIRECTIVE
   88                 | SHARED_DIRECTIVE
   89                 | SURF_DIRECTIVE
   90                 | TEX_DIRECTIVE

   91 type_spec: scalar_type
   92          | vector_spec scalar_type

   93 vector_spec: V2_TYPE
   94            | V3_TYPE
   95            | V4_TYPE

   96 scalar_type: S8_TYPE
   97            | S16_TYPE
   98            | S32_TYPE
   99            | S64_TYPE
  100            | U8_TYPE
  101            | U16_TYPE
  102            | U32_TYPE
  103            | U64_TYPE
  104            | F16_TYPE
  105            | F32_TYPE
  106            | F64_TYPE
  107            | FF64_TYPE
  108            | B8_TYPE
  109            | B16_TYPE
  110            | B32_TYPE
  111            | B64_TYPE
  112            | BB64_TYPE
  113            | BB128_TYPE
  114            | PRED_TYPE
  115            | TEXREF_TYPE
  116            | SAMPLERREF_TYPE
  117            | SURFREF_TYPE

  118 initializer_list: LEFT_BRACE literal_list RIGHT_BRACE
  119                 | LEFT_BRACE initializer_list RIGHT_BRACE

  120 literal_list: literal_operand
  121             | literal_list COMMA literal_operand

  122 instruction_statement: instruction SEMI_COLON
  123                      | IDENTIFIER COLON
  124                      | pred_spec instruction SEMI_COLON

  125 $@12: /* empty */

  126 instruction: opcode_spec LEFT_PAREN operand RIGHT_PAREN $@12 COMMA operand COMMA LEFT_PAREN operand_list RIGHT_PAREN
  127            | opcode_spec operand COMMA LEFT_PAREN operand_list RIGHT_PAREN
  128            | opcode_spec operand COMMA LEFT_PAREN RIGHT_PAREN
  129            | opcode_spec operand_list
  130            | opcode_spec

  131 $@13: /* empty */

  132 opcode_spec: OPCODE $@13 option_list
  133            | OPCODE

  134 pred_spec: PRED IDENTIFIER
  135          | PRED EXCLAMATION IDENTIFIER
  136          | PRED IDENTIFIER LT_OPTION
  137          | PRED IDENTIFIER EQ_OPTION
  138          | PRED IDENTIFIER LE_OPTION
  139          | PRED IDENTIFIER NE_OPTION
  140          | PRED IDENTIFIER GE_OPTION
  141          | PRED IDENTIFIER EQU_OPTION
  142          | PRED IDENTIFIER GTU_OPTION
  143          | PRED IDENTIFIER NEU_OPTION
  144          | PRED IDENTIFIER CF_OPTION
  145          | PRED IDENTIFIER SF_OPTION
  146          | PRED IDENTIFIER NSF_OPTION

  147 option_list: option
  148            | option option_list

  149 option: type_spec
  150       | compare_spec
  151       | addressable_spec
  152       | rounding_mode
  153       | SYNC_OPTION
  154       | ARRIVE_OPTION
  155       | RED_OPTION
  156       | POPC_REDUCTION
  157       | AND_REDUCTION
  158       | OR_REDUCTION
  159       | UNI_OPTION
  160       | WIDE_OPTION
  161       | ANY_OPTION
  162       | ALL_OPTION
  163       | BALLOT_OPTION
  164       | GLOBAL_OPTION
  165       | CTA_OPTION
  166       | SYS_OPTION
  167       | GEOM_MODIFIER_1D
  168       | GEOM_MODIFIER_2D
  169       | GEOM_MODIFIER_3D
  170       | SAT_OPTION
  171       | FTZ_OPTION
  172       | NEG_OPTION
  173       | APPROX_OPTION
  174       | FULL_OPTION
  175       | EXIT_OPTION
  176       | ABS_OPTION
  177       | atomic_operation_spec
  178       | TO_OPTION
  179       | HALF_OPTION
  180       | CA_OPTION
  181       | CG_OPTION
  182       | CS_OPTION
  183       | LU_OPTION
  184       | CV_OPTION
  185       | WB_OPTION
  186       | WT_OPTION

  187 atomic_operation_spec: ATOMIC_AND
  188                      | ATOMIC_OR
  189                      | ATOMIC_XOR
  190                      | ATOMIC_CAS
  191                      | ATOMIC_EXCH
  192                      | ATOMIC_CAS_SYNC
  193                      | ATOMIC_EXCH_SYNC
  194                      | ATOMIC_EXCH_INIT
  195                      | ATOMIC_ADD
  196                      | ATOMIC_INC
  197                      | ATOMIC_DEC
  198                      | ATOMIC_MIN
  199                      | ATOMIC_MAX

  200 rounding_mode: floating_point_rounding_mode
  201              | integer_rounding_mode

  202 floating_point_rounding_mode: RN_OPTION
  203                             | RZ_OPTION
  204                             | RM_OPTION
  205                             | RP_OPTION

  206 integer_rounding_mode: RNI_OPTION
  207                      | RZI_OPTION
  208                      | RMI_OPTION
  209                      | RPI_OPTION

  210 compare_spec: EQ_OPTION
  211             | NE_OPTION
  212             | LT_OPTION
  213             | LE_OPTION
  214             | GT_OPTION
  215             | GE_OPTION
  216             | LO_OPTION
  217             | LS_OPTION
  218             | HI_OPTION
  219             | HS_OPTION
  220             | EQU_OPTION
  221             | NEU_OPTION
  222             | LTU_OPTION
  223             | LEU_OPTION
  224             | GTU_OPTION
  225             | GEU_OPTION
  226             | NUM_OPTION
  227             | NAN_OPTION

  228 operand_list: operand
  229             | operand COMMA operand_list

  230 operand: IDENTIFIER
  231        | EXCLAMATION IDENTIFIER
  232        | MINUS IDENTIFIER
  233        | memory_operand
  234        | literal_operand
  235        | builtin_operand
  236        | vector_operand
  237        | MINUS vector_operand
  238        | tex_operand
  239        | IDENTIFIER PLUS INT_OPERAND
  240        | IDENTIFIER LO_OPTION
  241        | MINUS IDENTIFIER LO_OPTION
  242        | IDENTIFIER HI_OPTION
  243        | MINUS IDENTIFIER HI_OPTION
  244        | IDENTIFIER PIPE IDENTIFIER
  245        | IDENTIFIER PIPE IDENTIFIER LO_OPTION
  246        | IDENTIFIER PIPE IDENTIFIER HI_OPTION
  247        | IDENTIFIER BACKSLASH IDENTIFIER
  248        | IDENTIFIER BACKSLASH IDENTIFIER LO_OPTION
  249        | IDENTIFIER BACKSLASH IDENTIFIER HI_OPTION

  250 vector_operand: LEFT_BRACE IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  251               | LEFT_BRACE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  252               | LEFT_BRACE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  253               | LEFT_BRACE IDENTIFIER RIGHT_BRACE

  254 $@14: /* empty */

  255 tex_operand: LEFT_SQUARE_BRACKET IDENTIFIER COMMA $@14 vector_operand RIGHT_SQUARE_BRACKET

  256 builtin_operand: SPECIAL_REGISTER DIMENSION_MODIFIER
  257                | SPECIAL_REGISTER

  258 memory_operand: LEFT_SQUARE_BRACKET address_expression RIGHT_SQUARE_BRACKET
  259               | IDENTIFIER LEFT_SQUARE_BRACKET address_expression RIGHT_SQUARE_BRACKET
  260               | IDENTIFIER LEFT_SQUARE_BRACKET literal_operand RIGHT_SQUARE_BRACKET
  261               | IDENTIFIER LEFT_SQUARE_BRACKET twin_operand RIGHT_SQUARE_BRACKET
  262               | MINUS memory_operand

  263 twin_operand: IDENTIFIER PLUS IDENTIFIER
  264             | IDENTIFIER PLUS IDENTIFIER LO_OPTION
  265             | IDENTIFIER PLUS IDENTIFIER HI_OPTION
  266             | IDENTIFIER PLUS EQUALS IDENTIFIER
  267             | IDENTIFIER PLUS EQUALS IDENTIFIER LO_OPTION
  268             | IDENTIFIER PLUS EQUALS IDENTIFIER HI_OPTION
  269             | IDENTIFIER PLUS EQUALS INT_OPERAND

  270 literal_operand: INT_OPERAND
  271                | FLOAT_OPERAND
  272                | DOUBLE_OPERAND

  273 address_expression: IDENTIFIER
  274                   | IDENTIFIER LO_OPTION
  275                   | IDENTIFIER HI_OPTION
  276                   | IDENTIFIER PLUS INT_OPERAND
  277                   | INT_OPERAND


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 59 61
OPCODE (259) 132 133
ALIGN_DIRECTIVE (260) 44 80
BRANCHTARGETS_DIRECTIVE (261)
BYTE_DIRECTIVE (262)
CALLPROTOTYPE_DIRECTIVE (263)
CALLTARGETS_DIRECTIVE (264)
CONST_DIRECTIVE (265) 84
CONSTPTR_DIRECTIVE (266) 66
PTR_DIRECTIVE (267) 39 40
ENTRY_DIRECTIVE (268) 25 26
EXTERN_DIRECTIVE (269) 29 79
FILE_DIRECTIVE (270) 59
FUNC_DIRECTIVE (271) 27 28 29
GLOBAL_DIRECTIVE (272) 41 85
LOCAL_DIRECTIVE (273) 42 86
LOC_DIRECTIVE (274) 60
MAXNCTAPERSM_DIRECTIVE (275) 12
MAXNNREG_DIRECTIVE (276)
MAXNTID_DIRECTIVE (277) 10
MINNCTAPERSM_DIRECTIVE (278) 11
PARAM_DIRECTIVE (279) 35 87
PRAGMA_DIRECTIVE (280) 61
REG_DIRECTIVE (281) 37 81
REQNTID_DIRECTIVE (282)
SECTION_DIRECTIVE (283)
SHARED_DIRECTIVE (284) 43 88
SREG_DIRECTIVE (285) 82
STRUCT_DIRECTIVE (286)
SURF_DIRECTIVE (287) 89
TARGET_DIRECTIVE (288) 56 57 58
TEX_DIRECTIVE (289) 90
UNION_DIRECTIVE (290)
VERSION_DIRECTIVE (291) 53 54
ADDRESS_SIZE_DIRECTIVE (292) 55
VISIBLE_DIRECTIVE (293) 26 28
IDENTIFIER (294) 23 24 56 57 58 66 70 71 72 73 123 134 135 136 137
    138 139 140 141 142 143 144 145 146 230 231 232 239 240 241 242
    243 244 245 246 247 248 249 250 251 252 253 255 259 260 261 263
    264 265 266 267 268 269 273 274 275 276
INT_OPERAND (295) 10 11 12 44 55 59 60 66 71 73 80 239 269 270 276
    277
FLOAT_OPERAND (296) 271
DOUBLE_OPERAND (297) 53 54 272
S8_TYPE (298) 96
S16_TYPE (299) 97
S32_TYPE (300) 98
S64_TYPE (301) 99
U8_TYPE (302) 100
U16_TYPE (303) 101
U32_TYPE (304) 102
U64_TYPE (305) 103
F16_TYPE (306) 104
F32_TYPE (307) 105
F64_TYPE (308) 106
FF64_TYPE (309) 107
B8_TYPE (310) 108
B16_TYPE (311) 109
B32_TYPE (312) 110
B64_TYPE (313) 111
BB64_TYPE (314) 112
BB128_TYPE (315) 113
PRED_TYPE (316) 114
TEXREF_TYPE (317) 115
SAMPLERREF_TYPE (318) 116
SURFREF_TYPE (319) 117
V2_TYPE (320) 93
V3_TYPE (321) 94
V4_TYPE (322) 95
COMMA (323) 10 33 56 57 66 69 121 126 127 128 229 250 251 252 255
PRED (324) 134 135 136 137 138 139 140 141 142 143 144 145 146
HALF_OPTION (325) 179
EQ_OPTION (326) 137 210
NE_OPTION (327) 139 211
LT_OPTION (328) 136 212
LE_OPTION (329) 138 213
GT_OPTION (330) 214
GE_OPTION (331) 140 215
LO_OPTION (332) 216 240 241 245 248 264 267 274
LS_OPTION (333) 217
HI_OPTION (334) 218 242 243 246 249 265 268 275
HS_OPTION (335) 219
EQU_OPTION (336) 141 220
NEU_OPTION (337) 143 221
LTU_OPTION (338) 222
LEU_OPTION (339) 223
GTU_OPTION (340) 142 224
GEU_OPTION (341) 225
NUM_OPTION (342) 226
NAN_OPTION (343) 227
CF_OPTION (344) 144
SF_OPTION (345) 145
NSF_OPTION (346) 146
LEFT_SQUARE_BRACKET (347) 72 73 255 258 259 260 261
RIGHT_SQUARE_BRACKET (348) 72 73 255 258 259 260 261
WIDE_OPTION (349) 160
SPECIAL_REGISTER (350) 256 257
MINUS (351) 232 237 241 243 262
PLUS (352) 54 239 263 264 265 266 267 268 269 276
COLON (353) 123
SEMI_COLON (354) 52 61 62 122 124
EXCLAMATION (355) 135 231
PIPE (356) 244 245 246
RIGHT_BRACE (357) 45 118 119 250 251 252 253
LEFT_BRACE (358) 45 118 119 250 251 252 253
EQUALS (359) 64 65 266 267 268 269
PERIOD (360)
BACKSLASH (361) 247 248 249
DIMENSION_MODIFIER (362) 256
RN_OPTION (363) 202
RZ_OPTION (364) 203
RM_OPTION (365) 204
RP_OPTION (366) 205
RNI_OPTION (367) 206
RZI_OPTION (368) 207
RMI_OPTION (369) 208
RPI_OPTION (370) 209
UNI_OPTION (371) 159
GEOM_MODIFIER_1D (372) 167
GEOM_MODIFIER_2D (373) 168
GEOM_MODIFIER_3D (374) 169
SAT_OPTION (375) 170
FTZ_OPTION (376) 171
NEG_OPTION (377) 172
SYNC_OPTION (378) 153
RED_OPTION (379) 155
POPC_REDUCTION (380) 156
AND_REDUCTION (381) 157
OR_REDUCTION (382) 158
ARRIVE_OPTION (383) 154
ATOMIC_AND (384) 187
ATOMIC_OR (385) 188
ATOMIC_XOR (386) 189
ATOMIC_CAS (387) 190
ATOMIC_EXCH (388) 191
ATOMIC_CAS_SYNC (389) 192
ATOMIC_EXCH_SYNC (390) 193
ATOMIC_EXCH_INIT (391) 194
ATOMIC_ADD (392) 195
ATOMIC_INC (393) 196
ATOMIC_DEC (394) 197
ATOMIC_MIN (395) 198
ATOMIC_MAX (396) 199
LEFT_ANGLE_BRACKET (397) 71
RIGHT_ANGLE_BRACKET (398) 71
LEFT_PAREN (399) 17 23 126 127 128
RIGHT_PAREN (400) 17 23 126 127 128
APPROX_OPTION (401) 173
FULL_OPTION (402) 174
ANY_OPTION (403) 161
ALL_OPTION (404) 162
BALLOT_OPTION (405) 163
GLOBAL_OPTION (406) 164
CTA_OPTION (407) 165
SYS_OPTION (408) 166
EXIT_OPTION (409) 175
ABS_OPTION (410) 176
TO_OPTION (411) 178
CA_OPTION (412) 180
CG_OPTION (413) 181
CS_OPTION (414) 182
LU_OPTION (415) 183
CV_OPTION (416) 184
WB_OPTION (417) 185
WT_OPTION (418) 186


Nonterminals, with rules where they appear

$accept (164)
    on left: 0
input (165)
    on left: 1 2 3 4, on right: 0 2 3 4
function_defn (166)
    on left: 6 9, on right: 3
$@1 (167)
    on left: 5, on right: 6
$@2 (168)
    on left: 7, on right: 9
$@3 (169)
    on left: 8, on right: 9
block_spec (170)
    on left: 10 11 12, on right: 13 14
block_spec_list (171)
    on left: 13 14, on right: 9 14
function_decl (172)
    on left: 17 19 20, on right: 4 6 9 62
$@4 (173)
    on left: 15, on right: 17
$@5 (174)
    on left: 16, on right: 17
$@6 (175)
    on left: 18, on right: 19
function_ident_param (176)
    on left: 23 24, on right: 17 19
$@7 (177)
    on left: 21, on right: 23
$@8 (178)
    on left: 22, on right: 23
function_decl_header (179)
    on left: 25 26 27 28 29, on right: 17 19 20
param_list (180)
    on left: 30 31 33, on right: 23 33
$@9 (181)
    on left: 32, on right: 33
param_entry (182)
    on left: 35 37, on right: 17 31 33
$@10 (183)
    on left: 34, on right: 35
$@11 (184)
    on left: 36, on right: 37
ptr_spec (185)
    on left: 38 39 40, on right: 35
ptr_space_spec (186)
    on left: 41 42 43, on right: 39
ptr_align_spec (187)
    on left: 44, on right: 39 40
statement_block (188)
    on left: 45, on right: 6 9 50 51
statement_list (189)
    on left: 46 47 48 49 50 51, on right: 45 48 49 50
directive_statement (190)
    on left: 52 53 54 55 56 57 58 59 60 61 62, on right: 2 46 48
variable_declaration (191)
    on left: 63 64 65 66, on right: 52
variable_spec (192)
    on left: 67, on right: 35 37 63 64 65
identifier_list (193)
    on left: 68 69, on right: 63 69
identifier_spec (194)
    on left: 70 71 72 73, on right: 35 37 64 65 68 69
var_spec_list (195)
    on left: 74 75, on right: 67 75
var_spec (196)
    on left: 76 77 78 79, on right: 74 75
align_spec (197)
    on left: 80, on right: 78
space_spec (198)
    on left: 81 82 83, on right: 76
addressable_spec (199)
    on left: 84 85 86 87 88 89 90, on right: 83 151
type_spec (200)
    on left: 91 92, on right: 77 149
vector_spec (201)
    on left: 93 94 95, on right: 92
scalar_type (202)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112 113 114 115 116 117, on right: 91 92
initializer_list (203)
    on left: 118 119, on right: 64 119
literal_list (204)
    on left: 120 121, on right: 118 121
instruction_statement (205)
    on left: 122 123 124, on right: 47 49
instruction (206)
    on left: 126 127 128 129 130, on right: 122 124
$@12 (207)
    on left: 125, on right: 126
opcode_spec (208)
    on left: 132 133, on right: 126 127 128 129 130
$@13 (209)
    on left: 131, on right: 132
pred_spec (210)
    on left: 134 135 136 137 138 139 140 141 142 143 144 145 146, on right:
    124
option_list (211)
    on left: 147 148, on right: 132 148
option (212)
    on left: 149 150 151 152 153 154 155 156 157 158 159 160 161 162
    163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178
    179 180 181 182 183 184 185 186, on right: 147 148
atomic_operation_spec (213)
    on left: 187 188 189 190 191 192 193 194 195 196 197 198 199, on right:
    177
rounding_mode (214)
    on left: 200 201, on right: 152
floating_point_rounding_mode (215)
    on left: 202 203 204 205, on right: 200
integer_rounding_mode (216)
    on left: 206 207 208 209, on right: 201
compare_spec (217)
    on left: 210 211 212 213 214 215 216 217 218 219 220 221 222 223
    224 225 226 227, on right: 150
operand_list (218)
    on left: 228 229, on right: 126 127 129 229
operand (219)
    on left: 230 231 232 233 234 235 236 237 238 239 240 241 242 243
    244 245 246 247 248 249, on right: 126 127 128 228 229
vector_operand (220)
    on left: 250 251 252 253, on right: 236 237 255
tex_operand (221)
    on left: 255, on right: 238
$@14 (222)
    on left: 254, on right: 255
builtin_operand (223)
    on left: 256 257, on right: 235
memory_operand (224)
    on left: 258 259 260 261 262, on right: 233 262
twin_operand (225)
    on left: 263 264 265 266 267 268 269, on right: 261
literal_operand (226)
    on left: 270 271 272, on right: 65 120 121 234 260
address_expression (227)
    on left: 273 274 275 276 277, on right: 258 259


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . directive_statement
    3      | input . function_defn
    4      | input . function_decl

    $end                    shift, and go to state 2
    ALIGN_DIRECTIVE         shift, and go to state 3
    CONST_DIRECTIVE         shift, and go to state 4
    CONSTPTR_DIRECTIVE      shift, and go to state 5
    ENTRY_DIRECTIVE         shift, and go to state 6
    EXTERN_DIRECTIVE        shift, and go to state 7
    FILE_DIRECTIVE          shift, and go to state 8
    FUNC_DIRECTIVE          shift, and go to state 9
    GLOBAL_DIRECTIVE        shift, and go to state 10
    LOCAL_DIRECTIVE         shift, and go to state 11
    LOC_DIRECTIVE           shift, and go to state 12
    PARAM_DIRECTIVE         shift, and go to state 13
    PRAGMA_DIRECTIVE        shift, and go to state 14
    REG_DIRECTIVE           shift, and go to state 15
    SHARED_DIRECTIVE        shift, and go to state 16
    SREG_DIRECTIVE          shift, and go to state 17
    SURF_DIRECTIVE          shift, and go to state 18
    TARGET_DIRECTIVE        shift, and go to state 19
    TEX_DIRECTIVE           shift, and go to state 20
    VERSION_DIRECTIVE       shift, and go to state 21
    ADDRESS_SIZE_DIRECTIVE  shift, and go to state 22
    VISIBLE_DIRECTIVE       shift, and go to state 23
    S8_TYPE                 shift, and go to state 24
    S16_TYPE                shift, and go to state 25
    S32_TYPE                shift, and go to state 26
    S64_TYPE                shift, and go to state 27
    U8_TYPE                 shift, and go to state 28
    U16_TYPE                shift, and go to state 29
    U32_TYPE                shift, and go to state 30
    U64_TYPE                shift, and go to state 31
    F16_TYPE                shift, and go to state 32
    F32_TYPE                shift, and go to state 33
    F64_TYPE                shift, and go to state 34
    FF64_TYPE               shift, and go to state 35
    B8_TYPE                 shift, and go to state 36
    B16_TYPE                shift, and go to state 37
    B32_TYPE                shift, and go to state 38
    B64_TYPE                shift, and go to state 39
    BB64_TYPE               shift, and go to state 40
    BB128_TYPE              shift, and go to state 41
    PRED_TYPE               shift, and go to state 42
    TEXREF_TYPE             shift, and go to state 43
    SAMPLERREF_TYPE         shift, and go to state 44
    SURFREF_TYPE            shift, and go to state 45
    V2_TYPE                 shift, and go to state 46
    V3_TYPE                 shift, and go to state 47
    V4_TYPE                 shift, and go to state 48

    function_defn         go to state 49
    function_decl         go to state 50
    function_decl_header  go to state 51
    directive_statement   go to state 52
    variable_declaration  go to state 53
    variable_spec         go to state 54
    var_spec_list         go to state 55
    var_spec              go to state 56
    align_spec            go to state 57
    space_spec            go to state 58
    addressable_spec      go to state 59
    type_spec             go to state 60
    vector_spec           go to state 61
    scalar_type           go to state 62


state 2

    0 $accept: input $end .

    $default  accept


state 3

   80 align_spec: ALIGN_DIRECTIVE . INT_OPERAND

    INT_OPERAND  shift, and go to state 63


state 4

   84 addressable_spec: CONST_DIRECTIVE .

    $default  reduce using rule 84 (addressable_spec)


state 5

   66 variable_declaration: CONSTPTR_DIRECTIVE . IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND

    IDENTIFIER  shift, and go to state 64


state 6

   25 function_decl_header: ENTRY_DIRECTIVE .

    $default  reduce using rule 25 (function_decl_header)


state 7

   29 function_decl_header: EXTERN_DIRECTIVE . FUNC_DIRECTIVE
   79 var_spec: EXTERN_DIRECTIVE .

    FUNC_DIRECTIVE  shift, and go to state 65

    $default  reduce using rule 79 (var_spec)


state 8

   59 directive_statement: FILE_DIRECTIVE . INT_OPERAND STRING

    INT_OPERAND  shift, and go to state 66


state 9

   27 function_decl_header: FUNC_DIRECTIVE .

    $default  reduce using rule 27 (function_decl_header)


state 10

   85 addressable_spec: GLOBAL_DIRECTIVE .

    $default  reduce using rule 85 (addressable_spec)


state 11

   86 addressable_spec: LOCAL_DIRECTIVE .

    $default  reduce using rule 86 (addressable_spec)


state 12

   60 directive_statement: LOC_DIRECTIVE . INT_OPERAND INT_OPERAND INT_OPERAND

    INT_OPERAND  shift, and go to state 67


state 13

   87 addressable_spec: PARAM_DIRECTIVE .

    $default  reduce using rule 87 (addressable_spec)


state 14

   61 directive_statement: PRAGMA_DIRECTIVE . STRING SEMI_COLON

    STRING  shift, and go to state 68


state 15

   81 space_spec: REG_DIRECTIVE .

    $default  reduce using rule 81 (space_spec)


state 16

   88 addressable_spec: SHARED_DIRECTIVE .

    $default  reduce using rule 88 (addressable_spec)


state 17

   82 space_spec: SREG_DIRECTIVE .

    $default  reduce using rule 82 (space_spec)


state 18

   89 addressable_spec: SURF_DIRECTIVE .

    $default  reduce using rule 89 (addressable_spec)


state 19

   56 directive_statement: TARGET_DIRECTIVE . IDENTIFIER COMMA IDENTIFIER
   57                    | TARGET_DIRECTIVE . IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER
   58                    | TARGET_DIRECTIVE . IDENTIFIER

    IDENTIFIER  shift, and go to state 69


state 20

   90 addressable_spec: TEX_DIRECTIVE .

    $default  reduce using rule 90 (addressable_spec)


state 21

   53 directive_statement: VERSION_DIRECTIVE . DOUBLE_OPERAND
   54                    | VERSION_DIRECTIVE . DOUBLE_OPERAND PLUS

    DOUBLE_OPERAND  shift, and go to state 70


state 22

   55 directive_statement: ADDRESS_SIZE_DIRECTIVE . INT_OPERAND

    INT_OPERAND  shift, and go to state 71


state 23

   26 function_decl_header: VISIBLE_DIRECTIVE . ENTRY_DIRECTIVE
   28                     | VISIBLE_DIRECTIVE . FUNC_DIRECTIVE

    ENTRY_DIRECTIVE  shift, and go to state 72
    FUNC_DIRECTIVE   shift, and go to state 73


state 24

   96 scalar_type: S8_TYPE .

    $default  reduce using rule 96 (scalar_type)


state 25

   97 scalar_type: S16_TYPE .

    $default  reduce using rule 97 (scalar_type)


state 26

   98 scalar_type: S32_TYPE .

    $default  reduce using rule 98 (scalar_type)


state 27

   99 scalar_type: S64_TYPE .

    $default  reduce using rule 99 (scalar_type)


state 28

  100 scalar_type: U8_TYPE .

    $default  reduce using rule 100 (scalar_type)


state 29

  101 scalar_type: U16_TYPE .

    $default  reduce using rule 101 (scalar_type)


state 30

  102 scalar_type: U32_TYPE .

    $default  reduce using rule 102 (scalar_type)


state 31

  103 scalar_type: U64_TYPE .

    $default  reduce using rule 103 (scalar_type)


state 32

  104 scalar_type: F16_TYPE .

    $default  reduce using rule 104 (scalar_type)


state 33

  105 scalar_type: F32_TYPE .

    $default  reduce using rule 105 (scalar_type)


state 34

  106 scalar_type: F64_TYPE .

    $default  reduce using rule 106 (scalar_type)


state 35

  107 scalar_type: FF64_TYPE .

    $default  reduce using rule 107 (scalar_type)


state 36

  108 scalar_type: B8_TYPE .

    $default  reduce using rule 108 (scalar_type)


state 37

  109 scalar_type: B16_TYPE .

    $default  reduce using rule 109 (scalar_type)


state 38

  110 scalar_type: B32_TYPE .

    $default  reduce using rule 110 (scalar_type)


state 39

  111 scalar_type: B64_TYPE .

    $default  reduce using rule 111 (scalar_type)


state 40

  112 scalar_type: BB64_TYPE .

    $default  reduce using rule 112 (scalar_type)


state 41

  113 scalar_type: BB128_TYPE .

    $default  reduce using rule 113 (scalar_type)


state 42

  114 scalar_type: PRED_TYPE .

    $default  reduce using rule 114 (scalar_type)


state 43

  115 scalar_type: TEXREF_TYPE .

    $default  reduce using rule 115 (scalar_type)


state 44

  116 scalar_type: SAMPLERREF_TYPE .

    $default  reduce using rule 116 (scalar_type)


state 45

  117 scalar_type: SURFREF_TYPE .

    $default  reduce using rule 117 (scalar_type)


state 46

   93 vector_spec: V2_TYPE .

    $default  reduce using rule 93 (vector_spec)


state 47

   94 vector_spec: V3_TYPE .

    $default  reduce using rule 94 (vector_spec)


state 48

   95 vector_spec: V4_TYPE .

    $default  reduce using rule 95 (vector_spec)


state 49

    3 input: input function_defn .

    $default  reduce using rule 3 (input)


state 50
